# timeTimer

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  timer.rs
src/components/: Controls.tsx  Settings.tsx  TimerDial.tsx
src/lib/: sound.ts  stats.ts
src/stores/: timerStore.ts
